// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 1
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    <a
      href="https://github.com/ant-design/ant-design/issues/1862"
    >
      Link
    </a>
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Prevent Default
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-magenta"
      data-show="true"
    >
      magenta
    </div>
    <div
      class="ant-tag ant-tag-red"
      data-show="true"
    >
      red
    </div>
    <div
      class="ant-tag ant-tag-volcano"
      data-show="true"
    >
      volcano
    </div>
    <div
      class="ant-tag ant-tag-orange"
      data-show="true"
    >
      orange
    </div>
    <div
      class="ant-tag ant-tag-gold"
      data-show="true"
    >
      gold
    </div>
    <div
      class="ant-tag ant-tag-lime"
      data-show="true"
    >
      lime
    </div>
    <div
      class="ant-tag ant-tag-green"
      data-show="true"
    >
      green
    </div>
    <div
      class="ant-tag ant-tag-cyan"
      data-show="true"
    >
      cyan
    </div>
    <div
      class="ant-tag ant-tag-blue"
      data-show="true"
    >
      blue
    </div>
    <div
      class="ant-tag ant-tag-geekblue"
      data-show="true"
    >
      geekblue
    </div>
    <div
      class="ant-tag ant-tag-purple"
      data-show="true"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Unremovable
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 3
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
    data-show="true"
    style="background:#fff;border-style:dashed"
  >
    <i
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="plus"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M866.5 476H548V165.5c0-19.9-16.1-36-36-36s-36 16.1-36 36V476H164.5c-19.9 0-36 16.1-36 36s16.1 36 36 36H476v311.5c0 19.9 16.1 36 36 36s36-16.1 36-36V548h318.5c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
        />
      </svg>
    </i>
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/controlled.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Movies
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
        />
      </svg>
    </i>
  </div>
  <br />
  <button
    class="ant-btn ant-btn-sm"
    type="button"
  >
    <span>
      Toggle
    </span>
  </button>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Movies
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Books
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Music
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Sports
  </div>
</div>
`;
